[package]
name = "getignore"
authors = ["Ethan Evans <ethanalexevans@gmail.com>"]
description = "A CLI tool to fetch `.gitignore` file templates"
keywords = ["gitignore", "git", "ignore", "cli", "command-line"]
license = "MIT"
repository = "https://github.com/ethanavatar/getignore-rs"
readme = "README.md"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
curl = "0.4.44"
